# BCI_project

./: .gitignore  BCI_test  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  REPORT.md  code.md  pyproject.toml
scripts/: generate_report_figures.py  plot_results.py  run_baseline.py  run_experiments.py
src/: data_loader.py  decode.py  model.py  preprocessing.py  train.py  utils.py
tests/: test_data_loader.py  test_decode.py  test_model.py  test_preprocessing.py  test_train.py  test_utils.py
