[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "bci-p300-mixup"
version = "0.1.0"
description = "Mixup-Enhanced WE-SPSQ-CNN for P300 Character Recognition"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

# ---------------------------------------------------------------------------
# uv: PyTorch source selection
#
# On Windows/Linux:  pull CUDA 12.1 wheels from the PyTorch index
# On macOS:          pull from standard PyPI (MPS support is bundled)
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
